[package]
name = "reno"
version = "0.0.0"
description = "An app to communicate with Renogy BLE devices"
authors = ["Shaun Hamilton"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "shell-open",
  "fs-read-file",
  "fs-write-file",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
btleplug = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
clap = { version = "4", features = ["derive"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
